MB-55930: MagmaKVStore: Compact the system namespace

Drop collection processing can miss the purge of any modify
events belonging to the collection as they are in the system
namespace.

Change-Id: I07ca5d5053d96194f4683bf7ea197cba6884b29f
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/188139
Well-Formed: Restriction Checker
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Tested-by: Jim Walker <jim@couchbase.com>