engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc
@@ -4829,6 +4829,61 @@ TEST_P(CollectionsDcpPersistentOnly, getRangeCountingSystemEvents) {
     EXPECT_EQ(1, store->getVBucket(vbid)->getNumItems());
 }
 
+// runs persistent buckets but enables sync_every_batch for magma which helps
+// to make a couchstore vs magma slightly more comparable (certainly with
+// respect to MB-55930)
+class CollectionsDcpPersistentOnlyWithMagmaSyncAlways
+    : public CollectionsDcpPersistentOnly {
+    void SetUp() override {
+        // Cannot use isMagma as that needs the yet to be created engine*
+        if (GetParam().find("backend=magma") != std::string::npos) {
+            config_string += "magma_sync_every_batch=true";
+        }
+        CollectionsDcpPersistentOnly::SetUp();
+    }
+};
+
+// MB-55930 identified that magma didn't compact the system namespace, leaving
+// modify events behind.
+TEST_P(CollectionsDcpPersistentOnlyWithMagmaSyncAlways, ModifyAndDrop) {
+    using namespace cb::mcbp;
+    using namespace mcbp::systemevent;
+    using namespace CollectionEntry;
+
+    // create, modify and drop a collection. But flush each event (which is
+    // required to reproduce MB-55930 when the backend is magma)
+
+    CollectionsManifest cm;
+    cm.add(CollectionEntry::vegetable, cb::NoExpiryLimit, true);
+    setCollections(cookie, cm);
+    flush_vbucket_to_disk(vbid, 1);
+
+    cm.update(CollectionEntry::vegetable, cb::NoExpiryLimit, false);
+    setCollections(cookie, cm);
+    flush_vbucket_to_disk(vbid, 1);
+
+    cm.remove(CollectionEntry::vegetable);
+    setCollections(cookie, cm);
+    flush_vbucket_to_disk(vbid, 1);
+
+    runCollectionsEraser(vbid);
+
+    ensureDcpWillBackfill();
+    createDcpObjects(std::string_view{},
+                     OutOfOrderSnapshots::No,
+                     0,
+                     true, // sync-repl enabled
+                     ~0ull,
+                     ChangeStreams::No);
+    notifyAndStepToCheckpoint(cb::mcbp::ClientOpcode::DcpSnapshotMarker,
+                              false /*in-memory = false*/);
+
+    producer->stepAndExpect(*producers, ClientOpcode::DcpSystemEvent);
+    EXPECT_EQ(producers->last_system_event, id::DeleteCollection);
+    EXPECT_EQ(producers->last_collection_id, vegetable.getId());
+    EXPECT_EQ(producers->last_can_deduplicate, CanDeduplicate::Yes);
+}
+
 // Test cases which run for persistent and ephemeral buckets
 INSTANTIATE_TEST_SUITE_P(CollectionsDcpEphemeralOrPersistent,
                          CollectionsDcpParameterizedTest,
@@ -4848,4 +4903,9 @@ INSTANTIATE_TEST_SUITE_P(CollectionsDcpEphemeralOrPersistent,
 INSTANTIATE_TEST_SUITE_P(CollectionsDcpEphemeralOrPersistent,
                          MB48010CollectionsDCPParamTest,
                          STParameterizedBucketTest::allConfigValues(),
+                         STParameterizedBucketTest::PrintToStringParamName);
+
+INSTANTIATE_TEST_SUITE_P(CollectionsDcpEphemeralOrPersistent,
+                         CollectionsDcpPersistentOnlyWithMagmaSyncAlways,
+                         STParameterizedBucketTest::persistentConfigValues(),
                          STParameterizedBucketTest::PrintToStringParamName);
